<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_album_layout1"
    tools:context=".Fragments.ALBUM_FRAGMENT.album">

    <RelativeLayout
        android:id="@+id/fragment_album_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/playlist_background" >

    <LinearLayout
        android:id="@+id/alum_contents_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top_layout_album"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

            <ImageView
                android:id="@+id/back_arrow_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:src="@drawable/back_button" />

            <TextView
                android:id="@+id/album_name_album_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textColor="@android:color/background_light"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/like_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/album_settings_button"
                android:padding="16dp"
                android:src="@drawable/favorite_border" />

            <ImageView
                android:id="@+id/album_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:src="@drawable/more_options" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragment_album_layout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">

            <LinearLayout
                android:id="@+id/fragment_album_layout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:id="@+id/fragment_album_layout5"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:id="@+id/fragment_album_layout6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/album_image_album_fragment"
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/default_image" />

                        <TextView
                            android:id="@+id/album_name_middle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="album Name"
                            android:textColor="@android:color/background_light"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/album_owner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="Album by"
                            android:textAllCaps="true"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14dp" />

                        <Button
                            android:id="@+id/shuffle_play_button_album"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/rounded_button"
                            android:paddingLeft="40dp"
                            android:paddingRight="40dp"
                            android:text="shuffle play"
                            android:textAllCaps="true"
                            android:textColor="@android:color/background_light"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/preview_text_album"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="32dp"
                            android:paddingLeft="25dp"
                            android:paddingRight="25dp"
                            android:text="preview"
                            android:textColor="@android:color/background_light"
                            android:textSize="14dp" />

                        <LinearLayout
                            android:id="@+id/fragment_album_layout7"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/date_album"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="16dp"
                                android:text="Date "
                                android:textColor="@android:color/background_light"/>

                            <RelativeLayout
                                android:id="@+id/dowen_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/playlist_background">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/view_album_cardview"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_alignParentLeft="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:elevation="12dp"
                                    android:innerRadius="0dp"
                                    android:shape="ring"
                                    android:layout_marginLeft="8dp"
                                    android:thicknessRatio="1.9"
                                    app:cardCornerRadius="40dp">

                                    <ImageView
                                        android:id="@+id/artist_album_image"
                                        android:layout_width="match_parent"
                                        android:layout_height="80dp"
                                        android:layout_alignParentLeft="true"
                                        android:layout_alignParentTop="true"
                                        android:layout_centerVertical="true"
                                        android:scaleType="centerCrop"
                                        android:src="@drawable/default_image"/>
                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:id="@+id/artist_album_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:layout_margin="16dp"
                                    android:layout_toRightOf="@+id/view_album_cardview"
                                    android:padding="16dp"
                                    android:text=""
                                    android:textColor="@android:color/background_light"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/progress_bar_album"/>
        <LinearLayout
            android:id="@+id/something_wrong_layout_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:visibility="gone">
            <TextView
                android:id="@+id/something_wrong_text_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:text="something went wrong"
                android:gravity="center"/>
            <Button
                android:id="@+id/something_wrong_button_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_rounded_button"
                android:text="Try Again"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textSize="14dp"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/background_light"/>

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>