...
                android:text="Popular new releases"
                android:textColor="@color/TextColor"
                android:textSize="24dp"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints"></androidx.recyclerview.widget.RecyclerView>

            <TextView
...
                android:text="Popular album"
                android:textColor="@color/TextColor"
                android:textSize="24dp"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclealbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />

            <TextView
...
